# oscomp-kernel-training-Gallium70

./: .gitignore  Cargo.toml  Makefile  rust-toolchain.toml
.cargo/: config
easy-fs-fuse/src/: main.rs
kernel/: Cargo.toml  Makefile
kernel/src/: boot.rs  config.rs  logging.rs  main.rs  panic.rs
kernel/src/drivers/block/: mod.rs
kernel/src/fs/: inode.rs
kernel/src/mm/: heap.rs  memory_set.rs
kernel/src/syscall/: fs.rs  mod.rs  process.rs  thread.rs  time.rs
kernel/src/task/: id.rs  mod.rs  preload.asm  process.rs  processor.rs  scheduler.rs  task.rs
kernel/src/trap/: context.rs  mod.rs  trampoline.rs
libc/: Makefile
src/: allocator.rs  config.rs
src/drivers/block/: mod.rs  ramdisk.rs
src/mm/: frame.rs
src/task/: mod.rs  thread.rs
user/: Cargo.toml  Makefile
user/.cargo/: config.toml
user/src/: lib.rs  logging.rs  usr_call.rs
