[package]
name = "user_lib"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.8"
bitflags = "1.3.2"
log = "0.4"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[profile.dev]
debug = true
